--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -127,18 +127,26 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
+
 /** end reset css**/
 body {
   max-width: 1140px;
   margin: auto;
   font-family: "Work Sans";
   font-size: 14px;
+  background-color: #fffef8;
 }
+
 header {
   display: flex;
   justify-content: space-between;
   margin: 50px 0;
 }
+
 section {
   margin: 50px 0;
 }
@@ -156,6 +164,7 @@ h1 > span {
   font-family: "Work Sans";
   font-size: 10px;
   letter-spacing: 0.1em;
+  color: #93532f;
 }
 
 h2 {
@@ -175,9 +184,14 @@ nav li {
   cursor: pointer;
 }
 
-li:hover {
+li:hover a:hover {
   color: #b1663c;
 }
+
+nav img {
+  width: 22px;
+}
+
 #introduction {
   display: flex;
   align-items: center;
@@ -205,6 +219,31 @@ li:hover {
   text-align: center;
   margin-bottom: 1em;
 }
+
+.categories {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding-bottom: 2rem;
+}
+
+.categories-btn {
+  background-color: #fffef8;
+  border: 2px solid #1d6154;
+  color: #1d6154;
+  border-radius: 60px;
+  padding: 0.35rem 0.7rem;
+  text-align: center;
+  font-weight: 700;
+  font-family: "Syne";
+  cursor: pointer;
+}
+
+.categories-btn:hover {
+  background-color: #1d6154;
+  color: white;
+}
+
 .gallery {
   width: 100%;
   display: grid;
@@ -221,12 +260,16 @@ li:hover {
   width: 50%;
   margin: auto;
 }
-#contact > * {
-  text-align: center;
-}
 #contact h2 {
+  display: flex;
+  justify-content: center;
   margin-bottom: 20px;
 }
+#contact p {
+  display: flex;
+  justify-content: center;
+}
+
 #contact form {
   text-align: left;
   margin-top: 30px;
@@ -260,8 +303,62 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+footer {
+  position: absolute;
+  right: 8rem;
+  width: 100%;
+  margin-right: -8rem;
+}
+
 footer nav ul {
   display: flex;
   justify-content: flex-end;
-  margin: 2em;
+  padding: 2rem 6rem;
+  background-color: white;
+}
+
+/* Login page css */
+
+#login {
+  width: 50%;
+  margin: auto;
+}
+#login h2 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+#login form {
+  text-align: left;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+#login input {
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+#login label {
+  margin: 2em 0 1em 0;
+}
+
+#login-page header {
+  padding-bottom: 5rem;
+}
+
+.mdp-forgotten-btn {
+  border: none;
+  background: none;
+  font-family: "work Sans";
+  font-weight: 500;
+  font-size: 14px;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+#login-page section {
+  padding-bottom: 17.2rem;
 }
