--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -134,11 +134,14 @@ a {
 
 /** end reset css**/
 body {
-  max-width: 1140px;
-  margin: auto;
   font-family: "Work Sans";
   font-size: 14px;
   background-color: #fffef8;
+}
+
+.body-width {
+  max-width: 1140px;
+  margin: auto;
 }
 
 header {
@@ -215,6 +218,11 @@ nav img {
 #introduction p {
   margin-bottom: 0.5em;
 }
+
+#portfolio {
+  position: relative;
+}
+
 #portfolio h2 {
   text-align: center;
   margin-bottom: 1em;
@@ -303,17 +311,10 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-footer {
-  position: absolute;
-  right: 8rem;
-  width: 100%;
-  margin-right: -8rem;
-}
-
 footer nav ul {
   display: flex;
   justify-content: flex-end;
-  padding: 2rem 6rem;
+  padding: 1.5rem 5rem;
   background-color: white;
 }
 
@@ -375,4 +376,45 @@ footer nav ul {
   color: red;
   font-weight: 600;
   padding-top: 10px;
+}
+
+/* After login home page */
+
+.header-bar {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: white;
+  height: 3rem;
+}
+
+.header-bar button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 14px;
+  padding-right: 0.8rem;
+  cursor: pointer;
+}
+
+.edit-icon {
+  color: white;
+  padding-right: 0.8rem;
+}
+
+#portfolio .edit-icon {
+  color: black;
+}
+
+#portfolio .edit-btn {
+  display: none;
+  position: absolute;
+  left: 62%;
+  top: 0.3rem;
+  background: none;
+  border: none;
+  color: black;
+  font-size: 16px;
+  cursor: pointer;
 }
