--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -191,6 +191,10 @@ li:hover a:hover {
   color: #b1663c;
 }
 
+#logout {
+  display: none;
+}
+
 nav img {
   width: 18px;
 }
@@ -252,6 +256,11 @@ nav img {
   color: white;
 }
 
+.categories-btn-active {
+  background-color: #1d6154;
+  color: #fffef8;
+}
+
 .gallery {
   width: 100%;
   display: grid;
@@ -264,6 +273,7 @@ nav img {
   width: 100%;
   cursor: pointer;
 }
+
 #contact {
   width: 50%;
   margin: auto;
@@ -417,4 +427,37 @@ footer nav ul {
   color: black;
   font-size: 16px;
   cursor: pointer;
+}
+
+/* Modals */
+
+.edit-modal {
+  display: flex;
+  position: absolute;
+  left: calc(50% - 20rem);
+  justify-content: center;
+ border-radius: 2.5%;
+  width: 40rem;
+  height: 40rem;
+  top: -2rem;
+  background-color: white;
+}
+
+.close-modal {
+  position: absolute;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: white;
+  border: none;
+  right: 20px;
+  top: 20px;
+  font-weight: 400;
+}
+
+.edit-modal p {
+  font-size: 26px;
+  line-height: 30.5px;
+  font-weight: 400;
+  font-family: "Work-Sans";
+  padding-top: 40px;
 }
