Project completed and cleaned, new file modals created for facility, soutenance schedule, need to check for overlay over images after modals opened, on overlay click the modal should close, w3c test and then project succesfully optimized

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -434,9 +434,7 @@ footer nav ul {
 .body-shadow {
   position: absolute;
   width: 100%;
-  z-index: -1;
-  background-color: rgba(0, 0, 0, 0.519);
-  opacity: 0.9;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .edit-modal {
